--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Attendance</string>
+    <string name="app_name">TODO</string>
     <string name="attendance">Attendance</string>
     <string name="students">Students</string>
     <!-- TODO: Remove or change this placeholder text -->
@@ -12,4 +12,6 @@
     <string name="audience">Audience</string>
     <string name="all">All</string>
     <string name="add">Add</string>
+    <string name="task">Task</string>
+    <string name="action">Action</string>
 </resources>
